--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ dependencies = [
   "langgraph",
 "langchain_anthropic",
 "langchain_core",
-"langchain_openai"
+"langchain_openai",
+"langchain-google-genai",
+"python-dotenv"
 ]
 
 [build-system]
